<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_Header"
        android:text="@string/text_Header"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_Distance"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_Distance"
        android:textColorHint="@color/red"
        android:backgroundTint="@color/red"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"/>
    <TextView
        android:id="@+id/text_total_Km"
        android:text="@string/text_total_Km"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_Price"
        android:layout_marginTop="36dp"
        android:hint="@string/edit_Price"
        android:textColorHint="@color/red"
        android:backgroundTint="@color/red"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"/>
    <TextView
        android:id="@+id/text_Price_per_Liter"
        android:text="@string/text_Price_per_Liter"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_Autonomy"
        android:layout_marginTop="36dp"
        android:hint="@string/edit_Autonomy"
        android:textColorHint="@color/red"
        android:backgroundTint="@color/red"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"/>
    <TextView
        android:id="@+id/text_Ans"
        android:text="@string/text_Ans"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/text_label_resul"
        android:text="@string/text_label_resul"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@color/blue"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/button_Calculate"
        android:text="@string/button_Calculate"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:textAllCaps="true"
        android:backgroundTint="@color/lightGreen"
        android:textSize="20sp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:layout_height="wrap_content"/>
    
</LinearLayout>